<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ecd8d8"
    android:orientation="vertical"
    tools:context="com.only.yc.only_onez.Entry">

    <android.support.v7.widget.Toolbar
        android:id="@+id/Entry_Toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </android.support.v7.widget.Toolbar>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/Entry_Txt_UserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="100dp"
            android:text="@string/UserName"
            android:textSize="19sp"
            tools:ignore="RtlHardcoded" />

        <EditText
            android:id="@+id/Entry_Edt_UserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:layout_marginLeft="20dp"
            android:hint="@string/ShowUserName"
            tools:ignore="RtlHardcoded" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/Entry_Txt_UserPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="30dp"
            android:text="@string/UserPassword"
            android:textSize="19sp"
            tools:ignore="RtlHardcoded" />

        <EditText
            android:id="@+id/Entry_Edt_UserPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="20dp"
            android:hint="@string/ShowUserPassword"
            tools:ignore="RtlHardcoded"
            android:inputType="textPassword" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessLeaf">

        <Button
            android:id="@+id/Entry_Btn_OK"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="70dp"
            android:text="@string/Entry_Btn_OK"
            tools:ignore="ButtonStyle,RtlHardcoded" />

        <Button
            android:id="@+id/Entry_Btn_Q"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="70dp"
            android:text="@string/Login_btn_OK"
            tools:ignore="ButtonStyle,RtlHardcoded"/>

    </LinearLayout>

</LinearLayout>
